--- a/game_client/package.json
+++ b/game_client/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://192.168.37.128:8081/",
   "eslintConfig": {
     "extends": "react-app"
   },
